Added the ability to clean screen